# a2a-x402

./: .gitignore  BNB_SETUP.md  CODE_OF_CONDUCT.md  DEPLOYMENT_COMPLETE.md  FEATURES_ROADMAP  GITHUB_SETUP.md  README.md  README_BSC.md  RELEASE_NOTES.md  SUMMARY.md  WEBSITE_DOCS.md
.github/workflows/: bsc-demo.yml
python/examples/Economyx402/: .gitignore  BSC_PROGRAM_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOY_CONTRACT.md  DEPLOY_CONTRACT_HERE.txt  DEPLOY_LIVE.md  DEPLOY_LIVE.txt  DEPLOY_MAINNET.txt  DEPLOY_NOW.txt  DEPLOY_NOW_SIMPLE.txt  DEPLOY_REAL.txt  DEPLOY_VIA_REMIX.md  FIX_PIP_ERROR.txt  MINIMAL_EXAMPLE.md  NO_DEPLOYMENT_NEEDED.md  README.md  README_ENV.txt  RUN_DEPLOYMENT.ps1  SETUP_ENV.md  START_BSC_NOW.txt  START_DEPLOYMENT.txt  USE_EXISTING_CONTRACT.txt  getting_started_now.py  mcp_server_example.py  pyproject.toml  quickstart.md  requirements.txt
python/examples/Economyx402/client_agent/: __init__.py  agent.py  wallet.py
python/examples/Economyx402/contracts/: AuthTransferToken.sol  Facilitator.sol  LIVE_CONTRACT_SOL.sol  LIVE_DEPLOYMENT_GUIDE.md  README.md  SafeMath.sol  SimpleFacilitator.sol  compile.sh  deploy.py  deploy_facilitator.py  deploy_now.py  deploy_real.py  deploy_simple.py
python/examples/Economyx402/server/: __init__.py  __main__.py
python/examples/Economyx402/server/agents/: __init__.py  executor.py  facilitator.py  merchant_agent.py
python/examples/adk-demo/server/agents/: adk_merchant_agent.py
python/x402_a2a/core/: helpers.py  merchant.py
python/x402_a2a/types/: config.py
schemes/: README.md  scheme_exact_bsc.md
